; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_diff/extr_diff_tree.c_filter_dir_added.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_diff/extr_diff_tree.c_filter_dir_added.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.filter_tree_baton_t* }
%struct.filter_tree_baton_t = type { %struct.TYPE_5__*, i32 }
%struct.TYPE_5__ = type { i32 (i8*, i32*, i32*, i32*, i32*, i8*, %struct.TYPE_5__*, i32*)* }

@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32*, i32*, i32*, i32*, i8*, %struct.TYPE_4__*, i32*)* @filter_dir_added to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @filter_dir_added(i8* %0, i32* %1, i32* %2, i32* %3, i32* %4, i8* %5, %struct.TYPE_4__* %6, i32* %7) #0 {
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca %struct.TYPE_4__*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca %struct.filter_tree_baton_t*, align 8
  store i8* %0, i8** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32* %2, i32** %11, align 8
  store i32* %3, i32** %12, align 8
  store i32* %4, i32** %13, align 8
  store i8* %5, i8** %14, align 8
  store %struct.TYPE_4__* %6, %struct.TYPE_4__** %15, align 8
  store i32* %7, i32** %16, align 8
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load %struct.filter_tree_baton_t*, %struct.filter_tree_baton_t** %19, align 8
  store %struct.filter_tree_baton_t* %20, %struct.filter_tree_baton_t** %17, align 8
  %21 = load %struct.filter_tree_baton_t*, %struct.filter_tree_baton_t** %17, align 8
  %22 = getelementptr inbounds %struct.filter_tree_baton_t, %struct.filter_tree_baton_t* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = load i8*, i8** %9, align 8
  %25 = call i8* @svn_relpath_skip_ancestor(i32 %23, i8* %24)
  store i8* %25, i8** %9, align 8
  %26 = load i8*, i8** %9, align 8
  %27 = icmp ne i8* %26, null
  %28 = zext i1 %27 to i32
  %29 = call i32 @assert(i32 %28)
  %30 = load %struct.filter_tree_baton_t*, %struct.filter_tree_baton_t** %17, align 8
  %31 = getelementptr inbounds %struct.filter_tree_baton_t, %struct.filter_tree_baton_t* %30, i32 0, i32 0
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  %34 = load i32 (i8*, i32*, i32*, i32*, i32*, i8*, %struct.TYPE_5__*, i32*)*, i32 (i8*, i32*, i32*, i32*, i32*, i8*, %struct.TYPE_5__*, i32*)** %33, align 8
  %35 = load i8*, i8** %9, align 8
  %36 = load i32*, i32** %10, align 8
  %37 = load i32*, i32** %11, align 8
  %38 = load i32*, i32** %12, align 8
  %39 = load i32*, i32** %13, align 8
  %40 = load i8*, i8** %14, align 8
  %41 = load %struct.filter_tree_baton_t*, %struct.filter_tree_baton_t** %17, align 8
  %42 = getelementptr inbounds %struct.filter_tree_baton_t, %struct.filter_tree_baton_t* %41, i32 0, i32 0
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %42, align 8
  %44 = load i32*, i32** %16, align 8
  %45 = call i32 %34(i8* %35, i32* %36, i32* %37, i32* %38, i32* %39, i8* %40, %struct.TYPE_5__* %43, i32* %44)
  %46 = call i32 @SVN_ERR(i32 %45)
  %47 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %47
}

declare dso_local i8* @svn_relpath_skip_ancestor(i32, i8*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @SVN_ERR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
